@@ -67,6 +67,7 @@ class Driver : public IDriverLocal {
   virtual common::Error GetServerLoadedModules(std::vector<core::ModuleInfo>* modules) override;
   virtual common::Error GetCurrentDataBaseInfo(core::IDataBaseInfo** info) override;
 
+  virtual void HandleLoadDatabaseInfosEvent(events::LoadDatabasesInfoRequestEvent* ev) override;
   virtual void HandleLoadDatabaseContentEvent(events::LoadDatabaseContentRequestEvent* ev) override;
 
   virtual core::IServerInfoSPtr MakeServerInfoFromString(const std::string& val) override;
